# learn-ctl

./: ChangeLog.md  README.org  learn-ctl.cabal
presentation/: default.nix  presentation.org
src/: Main.hs
src/Data/Graph/: Kripke.hs
src/ModelChecking/: CTL.hs
