name:                learn-ctl
version:             0.1.0.0
synopsis:            Learning tool for CTL model-checking
license:             BSD3
license-file:        LICENSE
author:              octalsrc
maintainer:          nicklewchenko92@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable learn-ctl
  main-is:             Main.hs
  other-modules:       Data.Graph.Kripke
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , containers >=0.5 && <0.6
                     , fgl >=5.5 && <5.6
                     , reflex-dom >=0.4 && <0.5
                     , text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
